trying to fix background hight on mobile

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,11 +1,11 @@
 .wrapper {
    position: relative;
-   min-height: 100vh;
+   min-height: 100svh;
    display: flex;
    flex-direction: column;
 }
 .container {
-   min-height: 100vh;
+   min-height: 100svh;
    padding: 56px 30px 98px;
    max-width: 1130px;
    margin: 0 auto;
